--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ header li {
     color: #d9dcd6;
 }
 
-nav {
+.categories {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -37,18 +37,18 @@ nav {
     font-size: 20px;
 }
 
-nav li {
+.categories li {
     display: inline-block;
     margin-left: 25px;
 }
 
-nav a {
+.categories a {
     list-style-type: none;
     color: #ffffff;
     text-decoration: none;
 }
 
-main img {
+.hero {
     max-height: 800px;
     width: 100%;
     margin-bottom: 25px;
