--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,8 +48,8 @@ header li {
     text-decoration: none;
 }
 
-.hero {
-    max-height: 800px;
+.main-image {
+    height: 800px;
     width: 100%;
     margin-bottom: 25px;
     background-size: cover;
@@ -73,8 +73,8 @@ header li {
 
 .content img {
     margin-right: 25px;
-    max-height: 200px;
-    max-width: 300px;
+    height: 200px;
+    width: 300px;
 }
 
 .content h2 {
@@ -101,8 +101,8 @@ header li {
 .benefits img {
     display: block;
     margin: 10px auto;
-    max-width: 150px;
-    max-height: 150px;
+    width: 150px;
+    height: 150px;
 }
 
 .benefits h3 {
